[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/fifthSequence.gd" type="Script" id=1]
[ext_resource path="res://scenes/greece/greeceBack.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/readyBtn.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/impact.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/SkipBtn.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 27
font_data = ExtResource( 4 )

[node name="fifthSequence" type="Node2D"]
script = ExtResource( 1 )

[node name="greeceBack" parent="." instance=ExtResource( 2 )]

[node name="firstSeqBtn" parent="." instance=ExtResource( 3 )]
margin_left = 330.676
margin_top = 430.0
margin_right = 696.676
margin_bottom = 502.0
rect_scale = Vector2( 1, 1.00298 )
text = "THE FIFTH SEQUENCE"

[node name="C1" type="ColorRect" parent="."]
margin_left = 195.668
margin_top = 39.299
margin_right = 342.668
margin_bottom = 186.299
rect_scale = Vector2( 0.7, 0.7 )
color = Color( 0.278431, 0, 0.670588, 1 )

[node name="C7" type="ColorRect" parent="."]
margin_left = 197.1
margin_top = 161.2
margin_right = 344.1
margin_bottom = 308.2
rect_scale = Vector2( 0.7, 0.7 )
color = Color( 0.25098, 0.713726, 0.12549, 1 )

[node name="C14" type="ColorRect" parent="."]
margin_left = 197.1
margin_top = 286.2
margin_right = 344.1
margin_bottom = 433.2
rect_scale = Vector2( 0.7, 0.7 )
color = Color( 0.956863, 0.929412, 0, 1 )

[node name="C2" type="ColorRect" parent="."]
margin_left = 328.281
margin_top = 39.299
margin_right = 475.281
margin_bottom = 186.299
rect_scale = Vector2( 0.7, 0.7 )
color = Color( 0.25098, 0.713726, 0.12549, 1 )

[node name="C6" type="ColorRect" parent="."]
margin_left = 329.713
margin_top = 161.2
margin_right = 476.713
margin_bottom = 308.2
rect_scale = Vector2( 0.7, 0.7 )
color = Color( 1, 0.584314, 0, 1 )

[node name="C13" type="ColorRect" parent="."]
margin_left = 329.713
margin_top = 286.2
margin_right = 476.713
margin_bottom = 433.2
rect_scale = Vector2( 0.7, 0.7 )
color = Color( 0, 0, 0, 1 )

[node name="C3" type="ColorRect" parent="."]
margin_left = 458.447
margin_top = 39.299
margin_right = 605.447
margin_bottom = 186.299
rect_scale = Vector2( 0.7, 0.7 )

[node name="C10" type="ColorRect" parent="."]
margin_left = 459.879
margin_top = 161.2
margin_right = 606.879
margin_bottom = 308.2
rect_scale = Vector2( 0.7, 0.7 )
color = Color( 1, 0.0862745, 0.580392, 1 )

[node name="C11" type="ColorRect" parent="."]
margin_left = 459.879
margin_top = 286.2
margin_right = 606.879
margin_bottom = 433.2
rect_scale = Vector2( 0.7, 0.7 )
color = Color( 0.25098, 0.713726, 0.12549, 1 )

[node name="C4" type="ColorRect" parent="."]
margin_left = 588.762
margin_top = 39.299
margin_right = 735.762
margin_bottom = 186.299
rect_scale = Vector2( 0.7, 0.7 )
color = Color( 0.929412, 0.164706, 0, 1 )

[node name="C8" type="ColorRect" parent="."]
margin_left = 590.194
margin_top = 161.2
margin_right = 737.194
margin_bottom = 308.2
rect_scale = Vector2( 0.7, 0.7 )
color = Color( 0, 0, 0, 1 )

[node name="C12" type="ColorRect" parent="."]
margin_left = 590.194
margin_top = 286.2
margin_right = 737.194
margin_bottom = 433.2
rect_scale = Vector2( 0.7, 0.7 )
color = Color( 0.278431, 0, 0.670588, 1 )

[node name="C5" type="ColorRect" parent="."]
margin_left = 720.674
margin_top = 39.299
margin_right = 867.674
margin_bottom = 186.299
rect_scale = Vector2( 0.7, 0.7 )
color = Color( 0.956863, 0.929412, 0, 1 )

[node name="C9" type="ColorRect" parent="."]
margin_left = 722.106
margin_top = 161.2
margin_right = 869.106
margin_bottom = 308.2
rect_scale = Vector2( 0.7, 0.7 )
color = Color( 0, 0.815686, 1, 1 )

[node name="C15" type="ColorRect" parent="."]
margin_left = 722.106
margin_top = 286.2
margin_right = 869.106
margin_bottom = 433.2
rect_scale = Vector2( 0.7, 0.7 )
color = Color( 0, 0.431373, 1, 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="readyBtn" parent="." instance=ExtResource( 3 )]
margin_left = 892.0
margin_top = 444.408
margin_right = 977.0
margin_bottom = 486.408
custom_fonts/font = SubResource( 1 )
text = "Next"

[node name="SkipBtn" parent="." instance=ExtResource( 5 )]
[connection signal="pressed" from="firstSeqBtn" to="." method="_on_firstSeqBtn_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="readyBtn" to="." method="_on_readyBtn_pressed"]
[connection signal="pressed" from="SkipBtn" to="." method="_on_SkipBtn_pressed"]
